--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "author": "Lucas Bittar Magnani <lucasbittar.magnani@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "queue": "nodemon src/queue.js"
   },
   "dependencies": {
     "bcryptjs": "2.4.3",
+    "bee-queue": "1.2.3",
     "cors": "2.8.5",
     "crypto": "1.0.1",
     "date-fns": "2.0.0-beta.5",
