--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "queue": "nodemon src/queue.js"
   },
   "dependencies": {
+    "@sentry/node": "5.14.1",
     "bcryptjs": "2.4.3",
     "bee-queue": "1.2.3",
     "cors": "2.8.5",
@@ -16,6 +17,7 @@
     "date-fns": "2.0.0-beta.5",
     "dotenv": "8.2.0",
     "express": "4.17.1",
+    "express-async-errors": "3.1.1",
     "express-handlebars": "3.1.0",
     "jsonwebtoken": "8.5.1",
     "multer": "1.4.2",
@@ -23,6 +25,7 @@
     "nodemailer-express-handlebars": "3.1.0",
     "pg": "7.18.1",
     "pg-hstore": "2.3.3",
+    "youch": "2.0.10",
     "yup": "0.28.1"
   },
   "devDependencies": {
